<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">微信</string>
    <string name="chart">聊天</string>
    <string name="friend">朋友</string>
    <string name="moment">动态</string>
    <string name="mine">我的</string>
    <string name="search">搜索</string>
    <string name="add">添加</string>
    <string name="more">更多</string>
    <string name="login">登 陆</string>
    <string name="logining">正在登陆</string>

    
    <string name="action_plus">功能</string>
    <string name="action_album">我的相册</string>
    <string name="action_collection">我的收藏</string>
    <string name="action_card">我的银行卡</string>
    <string name="action_settings">设置</string>
    <string name="action_feed">意见反馈</string>
    <string name="plus_group_chat">发起群聊</string>
    <string name="plus_add_friend">添加朋友</string>
    <string name="plus_video_chat">视频聊天</string>
    <string name="plus_scan">扫一扫</string>
    <string name="plus_take_photo">拍照分享</string>
</resources>
